microservices/app-milestone-gateway/k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidm-app-milestone-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidm-app-milestone-gateway
  template:
    metadata:
      labels:
        app: lidm-app-milestone-gateway
    spec:
      containers:
      - name: lidm-app-milestone-gateway
        image: localhost:32000/lidm-app-milestone-gateway:1.0.2
        ports:
        - containerPort: 8000
