microservices/app-milestone-gateway/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidm-app-milestone-gateway-svc
spec:
  selector:
    app: lidm-app-milestone-gateway
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
